Add API allowing to list solutions for problemSet by user
